# GEMSTAT_scripts

python/: setup.cfg
python/examples/: template.par
python/scripts/: apply_noise_regularization.py  cic_attenuation.py  par_template_processor.py  par_to_free_fix.py  scale_matrix.py  score_predictions.py  seq_annot.py  set_matrix.py
python/src/gemstat/: __init__.py  matrix.py  model.py  motifs.py  pwm.py  scores.py  seqannotation.py
testdata/matrix/: test1.tab
testdata/par/format_v1.6a/: 1.par  10.par  2.par  3.par  4.par  5.par  6.par  7.par  8.par  9.par
