[metadata]
name = pygemstat
version = 0.0.1
author = Bryan J. Lunt
author_email = bjlunt2@illinois.edu
description = A package for dealing with GEMSTAT related files and things
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/UIUCSinhaLab/GEMSTAT_scripts
project_urls =
    Bug Tracker = https://github.com/UIUCSinhaLab/GEMSTAT_scripts/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires = "h5py"

[options.packages.find]
where = src
